added auto play button

--- a/game.html
+++ b/game.html
@@ -21,6 +21,8 @@
     <p class="computerC"></p>
     <p class="scoreBoard"></p>
     <button onclick="reset()" class="resetB">Reset</button>
+    <button class="autoB" onclick="
+    auto();">Auto Play</button>
     <script src="game.js"></script>
     
 </body>
